# azure-sdk-for-rust

./: Cargo.toml
eng/dict/: crates.txt
sdk/core/azure_core_amqp/: CHANGELOG.md  Cargo.toml
sdk/core/azure_core_amqp/src/: connection.rs
sdk/core/azure_core_amqp/src/fe2o3/: connection.rs  receiver.rs  sender.rs
sdk/eventhubs/azure_messaging_eventhubs/: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  RELEASE_READINESS_1.0.md  verify-offline.sh
sdk/eventhubs/azure_messaging_eventhubs/benches/: benchmarks.rs
sdk/eventhubs/azure_messaging_eventhubs/docs/: cpp_interop.md
sdk/eventhubs/azure_messaging_eventhubs/examples/: eventhubs_batch_produce_events.rs  eventhubs_connection_string.rs  eventhubs_consume_events.rs  eventhubs_produce_events.rs  eventhubs_smoke_test.rs  eventhubs_tracing_subscriber.rs  eventhubs_websocket_transport.rs
sdk/eventhubs/azure_messaging_eventhubs/src/: error.rs  in_memory_checkpoint_store.rs
sdk/eventhubs/azure_messaging_eventhubs/src/common/: authorizer.rs  retry.rs
sdk/eventhubs/azure_messaging_eventhubs/src/common/recoverable/: connection.rs  mod.rs  receiver.rs
sdk/eventhubs/azure_messaging_eventhubs/src/consumer/: event_receiver.rs  mod.rs
sdk/eventhubs/azure_messaging_eventhubs/src/event_processor/: load_balancer.rs  mod.rs  models.rs  processor.rs
sdk/eventhubs/azure_messaging_eventhubs/src/models/: mod.rs
sdk/eventhubs/azure_messaging_eventhubs/src/producer/: batch.rs  mod.rs
sdk/eventhubs/azure_messaging_eventhubs/tests/: eventhubs_checkpoint_store.rs  eventhubs_consumer.rs  eventhubs_consumer_error.rs  eventhubs_processor.rs  eventhubs_producer.rs  eventhubs_round_trip.rs  migration.rs
sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob/: Cargo.toml
sdk/servicebus/azure_messaging_servicebus/: Cargo.toml
tasks/: eh-1.0-readiness-harness.design.md
