# Copyright (c) Microsoft Corp. All Rights Reserved.

# AMQP Stack for consumption by packages in the Azure SDK.
[package]
name = "azure_core_amqp"
version = "1.2.0-beta.1"
description = "Rust client library for the AMQP protocol"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust/sdk/core/azure_core_amqp"
documentation = "https://docs.rs/azure_core_amqp"

keywords = ["sdk", "cloud", "rest", "iot"]
categories = ["api-bindings"]

edition.workspace = true

[dependencies]
async-trait.workspace = true
azure_core = { path = "../azure_core", version = "1.2.0-beta.1", default-features = false }
fe2o3-amqp = { workspace = true, optional = true }
fe2o3-amqp-ws = { workspace = true, optional = true }
fe2o3-amqp-cbs = { workspace = true, optional = true }
fe2o3-amqp-ext = { workspace = true, optional = true }
fe2o3-amqp-management = { workspace = true, optional = true }
fe2o3-amqp-types = { workspace = true, optional = true }
serde.workspace = true
serde_amqp = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
typespec = { path = "../typespec", version = "1.2.0-beta.1" }
typespec_macros = { path = "../typespec_macros", version = "1.1.0-beta.1" }

[dev-dependencies]
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["fe2o3_amqp", "native_tls"]
# TLS backend selection. The fe2o3 crates gate their TLS entry points behind
# their own features, so this crate forwards the choice to both of them and
# gates the WebSocket transport on it. Only native-tls is available: the rustls
# backend of fe2o3-amqp pulls in `ring`, which deny.toml bans. See issue #4189.
native_tls = ["fe2o3-amqp/native-tls", "fe2o3-amqp-ws/native-tls"]
ffi = []
test = []
fe2o3_amqp = [
  "dep:fe2o3-amqp",
  "dep:fe2o3-amqp-ws",
  "fe2o3-amqp-types",
  "fe2o3-amqp-ext",
  "fe2o3-amqp-management",
  "fe2o3-amqp-cbs",
  "serde_amqp",
  "serde_bytes",
  "azure_core/tokio",
]

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["fe2o3_amqp"]
