# Copyright (c) Microsoft Corp. All Rights Reserved.
# Licensed under the MIT license. See LICENSE file in the project root for full license information.

[package]
name = "azure_messaging_eventhubs"
version = "0.15.0"
description = "Rust client for Azure Eventhubs Service"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_messaging_eventhubs"
keywords = ["sdk", "cloud"]
categories = ["api-bindings"]

edition.workspace = true

[dependencies]
async-lock.workspace = true
async-stream.workspace = true
async-trait.workspace = true
azure_core = { path = "../../core/azure_core", version = "1.2.0-beta.1", default-features = false }
# Unreleased: AmqpTransport for AMQP-over-WebSockets (issue #3601). Path plus
# version per the dependency policy in AGENTS.md.
azure_core_amqp = { path = "../../core/azure_core_amqp", version = "1.2.0-beta.1" }
base64.workspace = true
futures.workspace = true
hmac.workspace = true
percent-encoding.workspace = true
rand.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
tracing.workspace = true

[build-dependencies]
rustc_version.workspace = true

[dev-dependencies]
azure_core_amqp = { path = "../../core/azure_core_amqp", features = ["test"] }
azure_core_test = { path = "../../core/azure_core_test", features = [
  "tracing",
] }
azure_identity = { path = "../../identity/azure_identity" }
azure_messaging_eventhubs = { path = ".", features = [
  "in_memory_checkpoint_store",
] }
# Path-only so `cargo package` works: this crate is a dependency of the
# checkpoint store crate, and the migration guide's blob sample compiles here.
azure_messaging_eventhubs_checkpointstore_blob = { path = "../azure_messaging_eventhubs_checkpointstore_blob" }
# Path-only, for the same reason as the checkpoint store crate above: the
# migration guide's blob sample must resolve the same azure_core as this crate.
azure_storage_blob = { path = "../../storage/azure_storage_blob" }
criterion.workspace = true
fe2o3-amqp = { workspace = true, features = ["tracing"] }
include-file.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
in_memory_checkpoint_store = []
default = ["azure_core_amqp/default"]

[[bench]]
name = "benchmarks"
harness = false

[lints]
workspace = true
