# Copyright (c) Microsoft Corp. All Rights Reserved.
# Licensed under the MIT license. See LICENSE file in the project root for full license information.

# cspell:ignore appender

[package]
name = "azure_messaging_eventhubs_checkpointstore_blob"
version = "0.9.0"
description = "Azure Event Hubs checkpoint store implementation using Azure Blob Storage"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
authors.workspace = true
keywords = ["sdk", "cloud"]
categories = ["api-bindings"]
documentation = "https://docs.rs/azure_messaging_eventhubs_checkpointstore_blob"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
azure_core = { path = "../../core/azure_core", version = "1.2.0-beta.1", default-features = false }
azure_messaging_eventhubs = { path = "../azure_messaging_eventhubs", version = "0.15.0" }
# Unreleased: must resolve the same azure_core as azure_messaging_eventhubs, which
# needs AmqpTransport (issue #3601). The registry build of azure_storage_blob pins
# the previous azure_core, which puts two copies of the crate in the graph.
azure_storage_blob = { path = "../../storage/azure_storage_blob", version = "1.1.0-beta.2" }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["serde"] }
tracing = { workspace = true }

[dev-dependencies]
azure_core_opentelemetry = { path = "../../core/azure_core_opentelemetry" }
azure_core_test = { path = "../../core/azure_core_test", features = [
  "tracing",
] }
azure_identity = { path = "../../identity/azure_identity" }
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["azure_core/default"]

[lints]
workspace = true
